remove false dir

--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
   <time class="text-sm antialiased opacity-60"
     >Nov 10, 2023</time
   >
-  <a class="absolute inset-0 text-[0]" href="/post/posts/golang-unit-test/">golang UT enhance</a>
+  <a class="absolute inset-0 text-[0]" href="/posts/golang-unit-test/">golang UT enhance</a>
 </section>
 
 
@@ -295,7 +295,7 @@
   <time class="text-sm antialiased opacity-60"
     >Jun 26, 2023</time
   >
-  <a class="absolute inset-0 text-[0]" href="/post/posts/recursive-function/">尾递归优化</a>
+  <a class="absolute inset-0 text-[0]" href="/posts/recursive-function/">尾递归优化</a>
 </section>
 
 
@@ -308,7 +308,7 @@
   <time class="text-sm antialiased opacity-60"
     >Mar 17, 2023</time
   >
-  <a class="absolute inset-0 text-[0]" href="/post/posts/mongodb/">mongoDB核心概念</a>
+  <a class="absolute inset-0 text-[0]" href="/posts/mongodb/">mongoDB核心概念</a>
 </section>
 
 
@@ -321,7 +321,7 @@
   <time class="text-sm antialiased opacity-60"
     >Sep 19, 2022</time
   >
-  <a class="absolute inset-0 text-[0]" href="/post/posts/dns/">DNS解析错了、不够智能、解析慢该怎么解决？</a>
+  <a class="absolute inset-0 text-[0]" href="/posts/dns/">DNS解析错了、不够智能、解析慢该怎么解决？</a>
 </section>
 
 
@@ -334,7 +334,7 @@
   <time class="text-sm antialiased opacity-60"
     >Feb 19, 2022</time
   >
-  <a class="absolute inset-0 text-[0]" href="/post/posts/kubernetes-programming/">怎么开发云原生应用？</a>
+  <a class="absolute inset-0 text-[0]" href="/posts/kubernetes-programming/">怎么开发云原生应用？</a>
 </section>
 
 
@@ -347,7 +347,7 @@
   <time class="text-sm antialiased opacity-60"
     >Nov 10, 2021</time
   >
-  <a class="absolute inset-0 text-[0]" href="/post/posts/grpc/">grpc</a>
+  <a class="absolute inset-0 text-[0]" href="/posts/grpc/">grpc</a>
 </section>
 
 
@@ -360,7 +360,7 @@
   <time class="text-sm antialiased opacity-60"
     >Sep 25, 2021</time
   >
-  <a class="absolute inset-0 text-[0]" href="/post/posts/cyber-security/">网络安全应该从哪几个方面考虑？</a>
+  <a class="absolute inset-0 text-[0]" href="/posts/cyber-security/">网络安全应该从哪几个方面考虑？</a>
 </section>
 
 
@@ -373,7 +373,7 @@
   <time class="text-sm antialiased opacity-60"
     >Jul 22, 2020</time
   >
-  <a class="absolute inset-0 text-[0]" href="/post/posts/go-program/">golang programming tips</a>
+  <a class="absolute inset-0 text-[0]" href="/posts/go-program/">golang programming tips</a>
 </section>
 
 
