--- a/public/404.html
+++ b/public/404.html
@@ -44,7 +44,7 @@
   />
 
   
-  <title>404 Page not found - 🥴</title>
+  <title>404 Page not found - 🐶</title>
 
   
   <meta name="theme-color" />
@@ -135,7 +135,7 @@
     <a
       class="-translate-x-[1px] -translate-y-[1px] text-2xl font-semibold"
       href="/"
-      >🥴</a
+      >🐶</a
     >
     <div
       class="btn-dark text-[0] ml-4 h-6 w-6 shrink-0 cursor-pointer [background:url(./theme.png)_left_center/_auto_theme('spacing.6')_no-repeat] [transition:_background-position_0.4s_steps(5)] dark:[background-position:right]"
@@ -249,7 +249,7 @@
 >
   <div class="mr-auto">
     &copy; 2024
-    <a class="link" href="/">🥴</a>
+    <a class="link" href="/">🐶</a>
   </div>
   <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank"
     >Powered by Hugo️️</a
