--- a/public/index.html
+++ b/public/index.html
@@ -267,7 +267,7 @@
   <div>
     <h1 class="mb-2 mt-3 text-[1.6rem] font-bold">Liu Zhe</h1>
     <div class="break-words">
-      😋
+      A personal blog by Liu Zhe
     </div>
   </div>
   
